trying out drag and drop. stopping it for now, wasting too much time

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ html, body {
 .add_object_icon {
     width: 100%;
     height: 100%;
+    cursor: grab;
 }
 
 .contentWindow {
